# ai-maestro

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  install-agent-cli.sh  install-messaging.sh  install.sh  maestro-credentials.example.yaml  middleware.ts  next.config.js  package.json  security-registry.json  server.mjs  tailwind.config.ts  tsconfig.json  update-aimaestro.sh  update-messaging.sh  verify-installation.sh  version.json
.claude/: settings.json
.githooks/: README.md  post-checkout  post-commit  post-merge  pre-push
.infographic/: gemini-comm-graph-prompt-v2.md  gemini-comm-graph-prompt.md  gemini-road-prompt.md  governance-rules-v1-backup.html  governance-rules.html
.rechecker/: commit-message.txt  files.txt  index.json  rck-progress.json
.serena/: .gitignore  project.yml
agents/: haephestos-creation-helper.md
app/: globals.css  layout.tsx  page.tsx
components/: AMPAddressesSection.tsx  AgentBadge.tsx  AgentConfigPanel.tsx  AgentCreationHelper.tsx  AgentCreationWizard.tsx  AgentGraph.tsx  AgentList.tsx  AgentProfile.tsx  AgentProfilePanel.tsx  AgentSearch.tsx  AgentSubconsciousIndicator.tsx  AvatarPicker.tsx  (+29 more)
rust-tools/aim-jsonl-reader/: Cargo.toml  README.md
rust-tools/aim-jsonl-reader/src/: context.rs  index.rs  main.rs  metadata.rs  protocol.rs  reader.rs  search.rs  timeline.rs
rust-tools/aim-jsonl-reader/tests/: integration.rs  metadata_test.rs
rust-tools/aim-jsonl-reader/tests/fixtures/: generate-big.sh
rust-tools/aim-jsonl-reader/tests/fixtures/dedup/: distinct_request_ids.jsonl  no_request_id.jsonl  retry_same_request_id.jsonl
(+1943 files in other folders)
