[package]
name = "aim-jsonl-reader"
version = "0.1.0"
edition = "2021"
description = "Streaming reader for Claude Code JSONL session files with sparse sidecar index, NDJSON stdio protocol."
license = "MIT"
publish = false
rust-version = "1.75"

[[bin]]
name = "aim-jsonl-reader"
path = "src/main.rs"

[dependencies]
# TRDD §4.6 invariant: these 4 crates ONLY. No network, no subprocess.
anyhow    = "1.0"
memmap2   = "0.9"
regex     = "1.10"
serde_json = "1.0"

[dev-dependencies]
# Integration tests need these. `tempfile` stays dev-only so the release
# binary doesn't grow. The RSS probe uses `ps` via std::process (tests
# only; the shipped binary never shells out).
tempfile = "3.10"

[profile.release]
# Small + fast. No debug info in the shipped binary.
lto           = "thin"
codegen-units = 1
opt-level     = 3
strip         = true
panic         = "abort"

# Cross-compile targets the build script resolves per host platform.
# macOS: aarch64-apple-darwin + x86_64-apple-darwin
# Linux: x86_64-unknown-linux-musl (static, portable)
[package.metadata.aim-targets]
macos-arm64 = "aarch64-apple-darwin"
macos-x64   = "x86_64-apple-darwin"
linux-x64   = "x86_64-unknown-linux-musl"
